--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/responsive.css">
 		<link rel="stylesheet" type="text/css" href="css/querys.css">
+		<link rel="stylesheet" href="css/amend.css">
 	</head>
 	<body>
 		<!--================Header Menu Area =================-->
@@ -80,7 +81,7 @@
 										<li class="nav-item">
 											
 										</li>
-										<li class="nav-item">
+										<li class="nav-item d-none">
 											<a class="main_btn" href="">Buscar Donativo</a>
 										</li>
 									</ul>
@@ -98,11 +99,11 @@
 			<div class="banner_inner d-flex align-items-center">
 				<div class="container">
 					<div class="banner_content row d-flex justify-content-center">
-						<div class="col-7">
+						<div class="col-10 col-sm-7>
 							<img class="img-fluid" src="" alt="">
 							<label class="lbl-ref">Ingresa la Referencia de tu donacion para saber<br> a donde fue asignado tu donativo</label>
 							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Escribe tu referencia" aria-label="Recipient's username" aria-describedby="button-addon2">
+								<input type="text" id="donacion-referencia" class="form-control" placeholder="Escribe tu referencia" aria-label="Recipient's username" aria-describedby="button-addon2">
 								<div class="input-group-append">
 									<button class="btn btn-outline-secondary btn-search" type="button" id="button-addon2"  onclick="getDataReference()">Buscar</button>
 								</div>
@@ -118,7 +119,7 @@
 		<section class="donation_details pad_top">
 			<div class="container">
 				<div class="row">
-					<h1 class="video-title">Continua apoyandonos para generar mas historias como estas:</h1>				
+					<h1 class="video-title">Tu donativo se encuentra en el <span class="institute-name"></span> <br>y con él podremos generar más historias como esta:</h1>				
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe src="https://www.youtube.com/embed/CTb6ZVxnzfo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>			
 					</div>
@@ -132,8 +133,8 @@
 					<div class="col-lg-12">									
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-lg-6 mb-30">
+				<div class="row testimonies-row">
+					<!-- <div class="col-lg-6 mb-30">
 						<div class="campaign_box">
 							<div class="camppaign d-flex">
 								<div class="img-box">
@@ -240,8 +241,11 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
+				<p>
+						“Las personas con discapacidad, antes que nada, y por sobre todas las cosas, simple y únicamente son personas”.
+					</p>
 			</div>
 		</section>
 		<!--================ eND OF hISTORIES section =================-->
@@ -251,15 +255,12 @@
 			<div class="row justify-content-center section-title-wrap">
 				<div class="col-lg-12">
 
-					<h1>Gracias por tu APOYO!</h1>
-					<p>
-						“Las personas con discapacidad, antes que nada, y por sobre todas las cosas, simple y únicamente son personas”.
-					</p>
+					<h1>Gracias a tu donativo, ellos tienen mejores oportunidades:</h1>
 				</div>
 			</div>
 
 			<div class="row">
-				<div id="our-major-cause" class="owl-carousel">
+				<div id="our-major-cause" class="owl-carousel ">
 					<div class="card">
 						<div class="card-body">
 							<figure>
@@ -436,8 +437,32 @@
 						</div>
 					</div>
 				</div>
+
 			</div>
 			</div>
+		</section>
+		<section class="charts-section">
+			<div class="row">
+				<div class="col-4 mr-3">
+					<div class="chart-container">
+						<h3>Este instituto atiende al <span class="current-patients-percent"></span>% de los pacientes inscritos a Teletón</h3>
+				      <canvas id="patients-chart" width="300" height="300"></canvas>
+				    </div>
+				</div>
+			    <div class="col-4 mr-3">
+			    	<h3>En él se han rehabilitado el <span class="porcentaje-pacientes-egresados"></span>% del total de los pacientes egresados de nuestros institutos</h3>
+				    <div class="chart-container">
+				      <canvas id="egresos-chart" width="300" height="300"></canvas>
+				    </div>
+			    </div>
+			    <div class="col-4 mr-3">
+			    	<h3>y con tu donativo, tan solo nos faltan <span class="monto-requerido"></span> de pesos para lograr nuestra meta!</h3>
+				    <div class="chart-container">
+				      <canvas id="finanzas-chart" width="300" height="300"></canvas>
+				    </div>
+			    </div>
+			</div>
+			<h1 class="text-center w-100">¡Gracias por apoyar a Teletón!</h1>
 		</section>
 		<!--================ End Experience Area =================-->
 		<!--================ Start Footer Area  =================-->
@@ -470,15 +495,10 @@
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/popper.js"></script>
 	<script src="js/bootstrap.min.js"></script>
-	<!-- <script src="vendors/lightbox/simpleLightbox.min.js"></script> -->
 	<script src="vendors/nice-select/js/jquery.nice-select.min.js"></script>
-	<!-- <script src="vendors/isotope/imagesloaded.pkgd.min.js"></script> -->
 	<script src="vendors/isotope/isotope-min.js"></script>
 	<script src="vendors/owl-carousel/owl.carousel.min.js"></script>
 	<script src="js/jquery.ajaxchimp.min.js"></script>
-	<!-- <script src="vendors/counter-up/jquery.waypoints.min.js"></script> -->
-	<!-- <script src="vendors/flipclock/timer.js"></script> -->
-	<!-- <script src="vendors/counter-up/jquery.counterup.js"></script> -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"></script>
 	<script src="js/mail-script.js"></script>
 	<script src="js/custom.js"></script>
