--- a/index.html
+++ b/index.html
@@ -442,26 +442,27 @@
 			</div>
 		</section>
 		<section class="charts-section">
-			<div class="row">
-				<div class="col-4 mr-3">
+			<div class="row d-flex justify-content-around">
+				<div class="col-4">
 					<div class="chart-container">
 						<h3>Este instituto atiende al <span class="current-patients-percent"></span>% de los pacientes inscritos a Teletón</h3>
 				      <canvas id="patients-chart" width="300" height="300"></canvas>
 				    </div>
 				</div>
-			    <div class="col-4 mr-3">
+			    <div class="col-4">
 			    	<h3>En él se han rehabilitado el <span class="porcentaje-pacientes-egresados"></span>% del total de los pacientes egresados de nuestros institutos</h3>
 				    <div class="chart-container">
 				      <canvas id="egresos-chart" width="300" height="300"></canvas>
 				    </div>
 			    </div>
-			    <div class="col-4 mr-3">
+			    <div class="col-4">
 			    	<h3>y con tu donativo, tan solo nos faltan <span class="monto-requerido"></span> de pesos para lograr nuestra meta!</h3>
 				    <div class="chart-container">
 				      <canvas id="finanzas-chart" width="300" height="300"></canvas>
 				    </div>
 			    </div>
 			</div>
+			<div class="w-100"></div>
 			<h1 class="text-center w-100">¡Gracias por apoyar a Teletón!</h1>
 		</section>
 		<!--================ End Experience Area =================-->
