--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</section>
 		<!--================ End Home Banner Area =================-->
 		<!--================ Start important-points section =================-->
-		<section class="donation_details pad_top">
+		<section id="first-section" class="donation_details pad_top">
 			<div class="container">
 				<div class="row">
 					<h1 class="video-title">Tu donativo se encuentra en el <span class="institute-name"></span> <br>y con él podremos generar más historias como esta:</h1>				
@@ -254,7 +254,6 @@
 			<div class="container">
 			<div class="row justify-content-center section-title-wrap">
 				<div class="col-lg-12">
-
 					<h1>Gracias a tu donativo, ellos tienen mejores oportunidades:</h1>
 				</div>
 			</div>
