--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							<label class="lbl-ref">Ingresa la Referencia de tu donacion para saber<br> a donde fue asignado tu donativo</label>
 							<div class="input-group">
 								<input type="text" id="donacion-referencia" class="form-control" placeholder="Escribe tu referencia" aria-label="Recipient's username" aria-describedby="button-addon2" value="RT_0001">
-								<div class="input-group-append">
+								<div class="input-group-append cursor-pointer">
 									<button class="btn btn-outline-secondary btn-search" type="button" id="button-addon2"  onclick="getDataReference()">Buscar</button>
 								</div>
 							</div>
@@ -108,144 +108,125 @@
 				</div>
 			</div>
 		</section>
-		<section id="first-section" class="our_major_cause section_gap">
+		<section id="first-section" class="section_gap">
 			<div class="container">
 				<div class="row justify-content-center section-title-wrap">
 					<div class="col-lg-12">
-						<h1>Gracias a tu donativo, ellos tienen mejores oportunidades:</h1>
+						<h1 class="video-title">Tu donativo se encuentra en el <span class="institute-name"></span> <br>y con él podremos generar más historias como esta:</h1>
 					</div>
 				</div>
 				<div class="row">
-					<div id="our-major-cause" class="owl-carousel ">
+					<div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
 									<img class="card-img-top img-fluid" src="img/imgconformato/img1.jpg" alt="Card image cap">
 								</figure>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-										<span>Edad: 4 años</span>
-									</div><br>
-								</div>
 								<div class="card_inner_body">
 									<div class="card-body-top">
-										<span></span> Retardo del desarrollo
+										<h4 class="card-title">NANCY</h4>
+										<b>Edad: 4 años, retardo del desarrollo</b> 
 									</div>
-									<h4 class="card-title">NANCY</h4>
+									<br>
 									<p class="card-text">La madre refiere estar muy contenta con el trabajo que se realizo y las atenciones que recibió por parte del equipo de trabajo que intervino con Nancy .
 									</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
 									<img class="card-img-top img-fluid" src="img/imgconformato/img2.jpg" alt="Card image cap">
 								</figure>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-										<span>Edad: 4 años</span>
-									</div>
-								</div>
 								<div class="card_inner_body">
 									<div class="card-body-top">
-										<span></span>Retardo del desarrollo
+										<h4 class="card-title">Jorge</h4>
+										<b>Edad: 4 años, Retardo del desarrollo</b>
 									</div>
-									<h4 class="card-title">Jorge</h4>
+									<br>
 									<p class="card-text">Estoy totalmente satisfecha y agradecida por los cambios que tuvo mi Ambercita, mil gracias y Dios los bendiga a todos.
 									</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
 									<img class="card-img-top img-fluid" src="img/imgconformato/img3.jpg" alt="Card image cap">
 								</figure>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-										<span>Edad: 6 años</span>
-									</div>
-								</div>
 								<div class="card_inner_body">
 									<div class="card-body-top">
-										<span></span> PARAPLEJIA FLACIDA
+										<h4 class="card-title">Maria</h4>
+										<b>Edad: 6 años Paraplejia flácida</b>
 									</div>
-									<h4 class="card-title">Maria</h4>
+									<br>
 									<p class="card-text">iAprendía a hacer ejercicio, para estar más fuerte y caminar, aprendía a leer
 									</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
 									<img class="card-img-top img-fluid" src="img/imgconformato/img4.jpg" alt="Card image cap">
 								</figure>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-										<span>Edad: 12 años</span>
-									</div>
-								</div>
 								<div class="card_inner_body">
 									<div class="card-body-top">
-										<span></span>PARAPLEJIA FLACIDA
+										<h4 class="card-title">Gaby</h4>
+										<b>Edad: 12 añosPARAPLEJIA FLACIDA</b>
 									</div>
-									<h4 class="card-title">Gaby</h4>
+									<br>
 									<p class="card-text">Me sentí muy bien en Teleton, la atención es muy eficaz. La verdad hice muchos amigos, la gente, el personal me trataron muy bien, quiero agradecer a toda esa gente que me apoyó, con ellos supere muchas metas, ahora mis logros se los dedico a ellos, me voy triste y a la vez feliz. Gracias
 									</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
 									<img class="card-img-top img-fluid" src="img/imgconformato/img5.jpg" alt="Card image cap">
 								</figure>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-										<span>Paraplejia</span>
-									</div>
-								</div>
 								<div class="card_inner_body">
 									<div class="card-body-top">
-										<span></span>Edad 8 años
+										<h4 class="card-title">Nanis</h4>
+										<b> 8 años, Paraplejia</b>
 									</div>
-									<h4 class="card-title">NANIS</h4>
+									<br>
 									<p class="card-text"> Gracias por el apoyo y atenciones recibidas en CRIT. Familia Martínez</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
-									<img class="card-img-top img-fluid" src="img/imgconformato/imgonce.jpg" alt="Card image cap">
+									<img class="card-img-top img-fluid" src="img/imgconformato/imgdiez.jpg" alt="Card image cap">
 								</figure>
-								<div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-										<span>Edad: 7 años</span>
-									</div>
-								</div>
-								<div class="card_inner_body">
+								<div class="card_inner_body align-self-bottom">
 									<div class="card-body-top">
-										<span></span>RETARDO DEL DESARROLLO
+										<h4 class="card-title">Ushio</h4>
+										<b>Edad: 7 años, Retardo de desarrollo</b>
 									</div>
-									<h4 class="card-title">Ushio</h4>
 									<p class="card-text">  Me siento feliz, aquí en el CRIT aprendí muchas cosas sobre el manejo de Josué, me aclararon dudas, me enseñaron muchas cosas.
 									</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
+					</div>
+					<!-- <div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
-									<img class="card-img-top img-fluid" src="img/imgconformato/img7.jpg" alt="Card image cap">
+									<img class="card-img-top img-fluid" src="img/imgconformato/imgdiez.jpg" alt="Card image cap">
 								</figure>
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
@@ -259,10 +240,11 @@
 									<h4 class="card-title">Jaimito</h4>
 									<p class="card-text">Estamos muy agradecidos por la atención,  y la dedicación por parte de todo el personal del CRIT; nos vamos muy contentos de ver los logros y todos los avances.
 									</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
+					</div>
+					<div class="col-sm-4">
 						<div class="card">
 							<div class="card-body">
 								<figure>
@@ -281,28 +263,28 @@
 									<h4 class="card-title">Andrea</h4>
 									<p class="card-text">Estamos muy contentos porque cuando llegamos aquí me dieron una opinión diferente a todos los demás lugares donde la habíamos llevado, gracias a Dios
 									</p>
-									<a href="#" class="main_btn2" onclick="location.href='http://www.teleton.org/home/colabora'">Colabora</a>
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>
-		<section class="donation_details pad_top">
+		<section class="donation_details">
 			<div class="container">
 				<div class="row">
-					<h1 class="video-title">Tu donativo se encuentra en el <span class="institute-name"></span> <br>y con él podremos generar más historias como esta:</h1>
+					<h1>Gracias a tu donativo, podemos multiplicar este tipo de anécdotas:</h1>
 					<div class="embed-responsive embed-responsive-16by9">
 						<iframe src="https://www.youtube.com/embed/CTb6ZVxnzfo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="support_campaign pad_bottom">
+		<section class="support_campaign">
 			<div class="container">
 				<div class="row justify-content-center section-title-wrap">
-					<div class="col-lg-12">
+					<div class="col-12">
+						<h1>Gracias a tu donativo, ellos tienen mejores oportunidades:</h1>
 					</div>
 				</div>
 				<div class="row testimonies-row">
@@ -409,40 +391,39 @@
 							</div>
 							<div class="progress">
 								<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
-									<span>Lorem ipsum dolor.</span>
+									
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<p>
-					“Las personas con discapacidad, antes que nada, y por sobre todas las cosas, simple y únicamente son personas”.
-				</p>
 			</div>
 		</section>
 		<section class="charts-section">
+			<p id="quote">“Las personas con discapacidad, antes que nada, y por sobre todas las cosas, simple y únicamente son personas”.</p>
 			<div class="row d-flex justify-content-around">
-				<div class="col-3">
+				<div class="col-3 chart-col">
+					<h3 class="text-justify">Este instituto atiende al <span class="current-patients-percent"></span>% de los pacientes inscritos a Teletón</h3>
 					<div class="chart-container">
-						<h3>Este instituto atiende al <span class="current-patients-percent"></span>% de los pacientes inscritos a Teletón</h3>
+						
 						<canvas id="patients-chart" width="300" height="300"></canvas>
 					</div>
 				</div>
-				<div class="col-3">
-					<h3>En él se han rehabilitado el <span class="porcentaje-pacientes-egresados"></span>% del total de los pacientes egresados de nuestros institutos</h3>
+				<div class="col-3 chart-col">
+					<h3 class="text-justify">En él se han rehabilitado el <span class="porcentaje-pacientes-egresados"></span>% del total de los pacientes egresados de nuestros institutos</h3>
 					<div class="chart-container">
 						<canvas id="egresos-chart" width="300" height="300"></canvas>
 					</div>
 				</div>
-				<div class="col-3">
-					<h3>y con tu donativo, tan solo nos faltan <span class="monto-requerido"></span> de pesos para lograr nuestra meta!</h3>
+				<div class="col-3 chart-col">
+					<h3 class="text-justify">Y con tu donativo, tan solo nos faltan <span class="monto-requerido"></span> de pesos para lograr nuestra meta!</h3>
 					<div class="chart-container">
 						<canvas id="finanzas-chart" width="300" height="300"></canvas>
 					</div>
 				</div>
 			</div>
 			<div class="w-100"></div>
-			<h1 class="text-center w-100 mt-3">¡Gracias por apoyar a Teletón!</h1>
+			<h1 class="text-center w-100 mt-5 mb-5">¡Gracias por apoyar a Teletón!</h1>
 		</section>
 		<footer class="footer-area section_gap">
 			<div class="container">
@@ -458,12 +439,12 @@
 		<script>
 		// Initialize Firebase
 			var config = {
-			    apiKey: "AIzaSyA6AUrsxmoi645-1yhv-F9W9G3q2_RKj44",
-			    authDomain: "hackatonteleton.firebaseapp.com",
-			    databaseURL: "https://hackatonteleton.firebaseio.com",
-			    projectId: "hackatonteleton",
-			    storageBucket: "hackatonteleton.appspot.com",
-			    messagingSenderId: "730018138942"
+			apiKey: "AIzaSyA6AUrsxmoi645-1yhv-F9W9G3q2_RKj44",
+			authDomain: "hackatonteleton.firebaseapp.com",
+			databaseURL: "https://hackatonteleton.firebaseio.com",
+			projectId: "hackatonteleton",
+			storageBucket: "hackatonteleton.appspot.com",
+			messagingSenderId: "730018138942"
 			};
 			firebase.initializeApp(config);
 		</script>
