--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<link rel="icon" href="" type="">
-		<title>KodemiaTon</title>
+		<title>Hackaton Teletón</title>
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="css/bootstrap.css">
 		<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -108,7 +108,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="first-section" class="section_gap">
+		<section id="first-section" class="section_gap d-none">
 			<div class="container">
 				<div class="row justify-content-center section-title-wrap">
 					<div class="col-lg-12">
@@ -270,7 +270,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="donation_details">
+		<section class="donation_details d-none">
 			<div class="container">
 				<div class="row">
 					<h1>Gracias a tu donativo, podemos multiplicar este tipo de anécdotas:</h1>
@@ -280,7 +280,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="support_campaign">
+		<section class="support_campaign d-none">
 			<div class="container">
 				<div class="row justify-content-center section-title-wrap">
 					<div class="col-12">
@@ -399,7 +399,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="charts-section">
+		<section class="charts-section d-none">
 			<p id="quote">“Las personas con discapacidad, antes que nada, y por sobre todas las cosas, simple y únicamente son personas”.</p>
 			<div class="row d-flex justify-content-around">
 				<div class="col-3 chart-col">
