--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			<div class="container">
 				<div class="row justify-content-center section-title-wrap">
 					<div class="col-lg-12">
-						<h1 class="video-title">Tu donativo se encuentra en el <span class="institute-name"></span> <br>y con él podremos generar más historias como esta:</h1>
+						<h1 class="video-title">Tu donativo se encuentra en el <span ><em class="institute-name text-italic"></em></span> <br>y con él podremos generar más historias como esta:</h1>
 					</div>
 				</div>
 				<div class="row">
